# tracefix

./: .env.example  .gitignore  AI_USAGE.md  README.md  pyproject.toml
.githooks/: post-commit
cases/: README.md  bug_case_01_syntax_error.py  bug_case_02_name_error.py  bug_case_03_argument_mismatch.py  bug_case_04_missing_file.py  bug_case_05_runtime_exception.py  bug_case_06_failure_superficial_fix.py  bug_case_07_failure_ambiguous_behavior.py  missing_colon_bug.py  name_error_bug.py  type_error_bug.py
config/: settings.example.json
docs/: ai_prompt_appendix.md  architecture_diagram.mmd  architecture_overview.md  baseline_comparison.md  core_flow_walkthrough.md  demo_click_path.md  demo_requirement_coverage.md  demo_script_notes.md  diagnoser_notes.md  executor_notes.md  failure_analysis_seed_notes.md  final_report_draft.md  final_submission_checklist.md  frontend_demo_notes.md  governance_and_risks.md  model_and_provider_policy.md  patcher_notes.md  phase3_failure_analysis.md  phase3_gap_report.md  phase3_submission_checklist.md  phase3_validation_report.md  phase3_workplan.md  project_summary.md  project_video_speech_notes.md  project_video_storyboard.md  run_instructions.md  screenshot_index_template.md  state_schema.md  verifier_notes.md  video_recording_checklist.md
evaluation/: ai_usage_log_template.md  baseline_comparison.csv  cases.md  evaluation_plan.md  evaluation_results.csv  failure_analysis.md  failure_cases.csv  failure_log.md  failure_log_template.csv  results_template.csv  run_evaluation.py  summary.md  test_cases.csv  version_notes.md
(+139 files in other folders)
