[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tracefix"
version = "0.1.0"
description = "CLI-first course project scaffold for conservative single-file Python debugging."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "TraceFix Course Project" }
]
dependencies = []

[project.scripts]
tracefix = "tracefix.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
